2_authn/yaml/dex_template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dex
  labels:
    app: dex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dex
  template:
    metadata:
      labels:
        app: dex
    spec:
      serviceAccountName: dex
      containers:
      - name: dex
        # image: quay.io/dexidp/dex:v2.26.0
        # image: quay.io/dexidp/dex:v2.28.1
        image: dexidp/dex:v2.30.0
        # image: dexidp/dex:v2.30.3
        # image: dexidp/dex:v2.31.2
        # image: dexidp/dex:v2.32.0
        # image: dexidp/dex:v2.32.0-alpine
        # image: dexidp/dex:v2.32.0-distroless
        imagePullPolicy: Always
        command:
          - "/usr/local/bin/dex"
          - "serve"
          - "/etc/dex/cfg/config.yaml"
        ports:
          - name: https
            containerPort: 5556
        # readinessProbe:
        #   httpGet:
        #     path: /healthz
        #     port: 5556
        volumeMounts:
          - name: config
            mountPath: /etc/dex/cfg
          - name: tls
            mountPath: /etc/dex/tls
      volumes:
        - name: config
          secret:
            secretName: dex
        - name: tls
          secret:
            secretName: dex.tls
---
apiVersion: v1
kind: Service
metadata:
  name: dex
  labels:
    app: dex
spec:
  type: NodePort
  selector:
    app: dex
  ports:
    - name: dex
      port: 5556
      protocol: TCP
      targetPort: 5556
      nodePort: 32000
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: dex
#   labels:
#     app: dex
#   annotations:
#     nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
#     nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: ${DEX_HOST}
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: dex
#                 port:
#                   number: 5556
