2_authn/yaml/openldap_template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openldap
  labels:
    app: openldap
spec:
  selector:
    matchLabels:
      app: openldap
  replicas: 1
  template:
    metadata:
      labels:
        app: openldap
    spec:
      containers:
        - name: openldap
          image: bitnami/openldap:2.6.3
          imagePullPolicy: Always
          ports:
            - name: tcp-ldap
              containerPort: 1389
          volumeMounts:
            - name: config
              mountPath: /ldifs
      volumes:
        - name: config
          secret:
            secretName: openldap-config
---
apiVersion: v1
kind: Service
metadata:
  name: openldap
  labels:
    app: openldap
spec:
  type: NodePort
  selector:
    app: openldap
  ports:
    - port: 1389
      name: openldap
      targetPort: tcp-ldap
      nodePort: 32500
